core-services/InfluxDB/influxdb-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb-ingress
  namespace: services
  annotations:
    ingress.class: "haproxy"
spec:
  rules:
  - host: influxdb.home.virtualelephant.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: influxdb
            port:
              number: 8086
